Finished sections except footer for homepage

--- a/index.html
+++ b/index.html
@@ -8,14 +8,125 @@
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Google Font: Roboto -->
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@1,8..60,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@1,8..60,300&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="style/style.css" rel="stylesheet">
 </head>
 <body>
+
+    <!-- Header -->
+
+
     
+    <!-- Intro -->
+    
+    <section class="intro position-relative">
+        <img src="/assets/home-people.png" class="people position-absolute">
+        <div class="row d-flex align-items-center header-row p-5">
+            <div class="col-6 d-flex justify-content-center pr-3">
+                <img src="/assets/worksync-logo.png" class="home-logo">
+            </div>
+            <div class="col-6 d-flex justify-content-start pl-5">
+                <a href="" class="navi text-muted ml-5">SERVICES</a>
+                <a href="" class="navi text-muted ml-5">INQUIRIES</a>
+                <a href="" class="navi text-muted ml-5">JOIN US</a>
+                <a href="" class="navi text-muted ml-5">ABOUT US</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="home-tagline col-12 d-flex align-items-center justify-content-start p-5">
+                <span>
+                    Staffing Solutions <br> Redefined with <br> Technology
+                </span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Welcome -->
+
+    <section class="welcome">
+        <div class="welcome-row row">
+            <div class="col-12 welcome-col bg-white d-flex align-items-center justify-content-center flex-column">
+                <span class="welcome-title">
+                    Welcome to WORKSYNC
+                </span>
+
+                <span class="welcome-desc text-center">
+                    WORKSYNC SOLUTIONS CORP. is a manpower service solutions company aimed in providing long-term solutions to staffing needs. Our extensive knowledge and experience in Quality, Productivity and Innovation would redefine the industry.
+                    <br> <br>
+                    We place an emphasis on <strong>efficiency</strong>, <strong>innovative training</strong> and <strong>technology solutions</strong> empowering our clients for global success.
+                </span>
+
+                <img src="/assets/welcome-clipart.png" class="mt-5">
+            </div>
+        </div>
+    </section>
+
+    <!-- Why choose us -->
+
+    <section class="why">
+        <div class="row why-row">
+            <div class="col-5 why-left d-flex align-items-end justify-content-center">
+                <img src="/assets/why.png">
+            </div>
+            <div class="col-7 why-right">
+                <div class="d-flex flex-column justify-between align-items-center">
+                    <img src="/assets/question-mark.png">
+                    <span>
+                        At WorkSync Solutions Corp., we are dedicated to understanding the <strong>unique needs of our clients</strong> and delivering tailored solutions that drive success. 
+                        <br> <br>
+                        Join us in experiencing staffing solutions that are effective, and aligned with the demands of the modern workplace.
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Services -->
+
+    <section class="service">
+        <div class="row service-row">
+            <div class="col-12 service-col d-flex flex-column align-items-center justify-content-center">
+                <span class="service-title text-white">
+                    SERVICES OFFERED
+                </span>
+
+                <span class="service-desc text-white text-center">
+                    At WORKSYNC, we dedicate ourselves to offering unparalleled services in the field of human capital. We understand the value of a skilled workforce and are committed to providing the best staffing solutions for the following needs.
+                </span>
+
+                <div class="service-cont d-flex align-items-center justify-content-around w-100">
+                    <div class="service-item d-flex flex-column align-items-center justify-content-center">
+                        <img src="/assets/service-dummy.png">
+                        <span class="text-white my-3">Quality Line Inspection</span>
+                    </div>
+
+                    <div class="service-item d-flex flex-column align-items-center justify-content-center">
+                        <img src="/assets/service-dummy.png">
+                        <span class="text-white my-3">Packing/Sorting</span>
+                    </div>
+
+                    <div class="service-item d-flex flex-column align-items-center justify-content-center">
+                        <img src="/assets/service-dummy.png">
+                        <span class="text-white my-3">Warehousing</span>
+                    </div>
+                </div>
+
+                <button>
+                    LEARN MORE
+                </button>
+            </div>
+        </div>
+    </section>
+
     <!-- Bootstrap JS and dependencies (optional but recommended) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
