added people carrying box in why section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
     <!-- Why choose us -->
 
-    <section class="why">
+    <section class="why position-relative">
+        <img src="/assets/why-carry.png" class="carry position-absolute">
         <div class="row why-row">
             <div class="col-5 why-left d-flex align-items-end justify-content-center">
                 <img src="/assets/why.png">
