Changes to path and body style

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <!-- Intro -->
     
     <section class="intro position-relative">
-        <img src="/assets/home-people.png" class="people position-absolute">
+        <img src="assets/home-people.png" class="people position-absolute">
         <div class="row d-flex align-items-center header-row p-5">
             <div class="col-6 d-flex justify-content-center pr-3">
-                <img src="/assets/worksync-logo.png" class="home-logo">
+                <img src="assets/worksync-logo.png" class="home-logo">
             </div>
             <div class="col-6 d-flex justify-content-start pl-5">
                 <a href="" class="navi text-muted ml-5">SERVICES</a>
@@ -65,7 +65,7 @@
                     We place an emphasis on <strong>efficiency</strong>, <strong>innovative training</strong> and <strong>technology solutions</strong> empowering our clients for global success.
                 </span>
 
-                <img src="/assets/welcome-clipart.png" class="mt-5">
+                <img src="assets/welcome-clipart.png" class="mt-5">
             </div>
         </div>
     </section>
@@ -73,14 +73,14 @@
     <!-- Why choose us -->
 
     <section class="why position-relative">
-        <img src="/assets/why-carry.png" class="carry position-absolute">
+        <img src="assets/why-carry.png" class="carry position-absolute">
         <div class="row why-row">
             <div class="col-5 why-left d-flex align-items-end justify-content-center">
-                <img src="/assets/why.png">
+                <img src="assets/why.png">
             </div>
             <div class="col-7 why-right">
                 <div class="d-flex flex-column justify-between align-items-center">
-                    <img src="/assets/question-mark.png">
+                    <img src="assets/question-mark.png">
                     <span>
                         At WorkSync Solutions Corp., we are dedicated to understanding the <strong>unique needs of our clients</strong> and delivering tailored solutions that drive success. 
                         <br> <br>
@@ -106,17 +106,17 @@
 
                 <div class="service-cont d-flex align-items-center justify-content-around w-100">
                     <div class="service-item d-flex flex-column align-items-center justify-content-center">
-                        <img src="/assets/service-dummy.png">
+                        <img src="assets/service-dummy.png">
                         <span class="text-white my-3">Quality Line Inspection</span>
                     </div>
 
                     <div class="service-item d-flex flex-column align-items-center justify-content-center">
-                        <img src="/assets/service-dummy.png">
+                        <img src="assets/service-dummy.png">
                         <span class="text-white my-3">Packing/Sorting</span>
                     </div>
 
                     <div class="service-item d-flex flex-column align-items-center justify-content-center">
-                        <img src="/assets/service-dummy.png">
+                        <img src="assets/service-dummy.png">
                         <span class="text-white my-3">Warehousing</span>
                     </div>
                 </div>
