--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@1,8..60,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@1,8..60,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Custom CSS -->
     <link href="style/style.css" rel="stylesheet">
@@ -124,6 +125,89 @@
                 <button>
                     LEARN MORE
                 </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+
+    <section class="footer">
+        <div class="row footer-row">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 footer-left d-flex justify-content-start align-items-start flex-column">
+                <div class="footer-nav d-flex flex-column mb-4">
+                    <span class="footer-nav-item mb-2">
+                        <a href="">ABOUT US</a>
+                    </span>
+                    <span class="footer-nav-item mb-2">
+                        <a href="">SERVICES</a>
+                    </span>
+                    <span class="footer-nav-item mb-2">
+                        <a href="">JOIN US</a>
+                    </span>
+                </div>
+
+                <div class="socmed mb-5">
+                    <span class="mb-5">Find us on</span>
+                    <div class="socmed-logo">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-linkedin"></i>
+                        <i class="bi bi-twitter-x"></i>
+                    </div>
+                </div>
+
+                <img src="assets/worksync-footer.png" class="footer-left_image">
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
+                <div class="footer-right_item mb-3">
+                    <i class="bi bi-telephone-outbound-fill"></i>
+                    <span>
+                        +63 (926) 638 7233
+                        info@worksyncsolutions.com
+                    </span>
+                </div>
+
+                <div class="footer-right_item mb-3">
+                    <i class="bi bi-geo-alt-fill"></i>
+                    <span>
+                        S13 LYSA QUEEN Bldg., KM 37,  MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
+                    </span>
+                </div>
+
+                <img src="assets/footer-map.png" class="footer-map">
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 d-flex flex-column footer-right">
+                <span class="footer-right_title mb-4">
+                    Send us a message!
+                </span>
+
+                <div class="footer-right_row row d-flex justify-content-end">
+                    <div class="col-12 input-cont d-flex mb-3">
+                        <span>NAME*</span>
+                        <input type="text">
+                    </div>
+                    <div class="col-12 input-cont d-flex mb-3">
+                        <span>COMPANY*</span>
+                        <input type="text">
+                    </div>
+                    <div class="col-5 input-cont-6 d-flex mb-3">
+                        <span>CONTACT NUMBER*</span>
+                        <input type="text">
+                    </div>
+                    <div class="col-5 input-cont-6 d-flex mb-3">
+                        <span>EMAIL*</span>
+                        <input type="text">
+                    </div>
+                    <div class="col-12 input-cont d-flex mb-3">
+                        <span>MESSAGE*</span>
+                        <textarea></textarea>
+                    </div>
+                    </div>
+                    <div class="col-12 button-cont d-flex mb-3 justify-content-end">
+                        <i class="bi bi-send-fill"></i>
+                        <span>SEND INQUIRY</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
