--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <title>WorkSync Solutions Corp</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
             <div class="col-6 d-flex justify-content-center pr-3">
                 <img src="assets/worksync-logo.png" class="home-logo">
             </div>
-            <div class="col-6 d-flex justify-content-start pl-5">
+            <div class="homenav col-6 d-flex justify-content-start pl-5">
                 <a href="" class="navi text-muted ml-5">SERVICES</a>
                 <a href="" class="navi text-muted ml-5">INQUIRIES</a>
                 <a href="" class="navi text-muted ml-5">JOIN US</a>
@@ -74,15 +74,15 @@
     <!-- Why choose us -->
 
     <section class="why position-relative">
-        <img src="assets/why-carry.png" class="carry position-absolute">
+        <!-- <img src="assets/why-carry.png" class="carry position-absolute"> -->
         <div class="row why-row">
-            <div class="col-5 why-left d-flex align-items-end justify-content-center">
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 why-left d-flex align-items-end justify-content-center">
                 <img src="assets/why.png">
             </div>
-            <div class="col-7 why-right">
-                <div class="d-flex flex-column justify-between align-items-center">
-                    <img src="assets/question-mark.png">
+            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 why-right">
+                <div class="d-flex flex-column justify-between align-items-center w-100">
                     <span>
+                        <img src="assets/question-mark.png">
                         At WorkSync Solutions Corp., we are dedicated to understanding the <strong>unique needs of our clients</strong> and delivering tailored solutions that drive success. 
                         <br> <br>
                         Join us in experiencing staffing solutions that are effective, and aligned with the demands of the modern workplace.
@@ -105,6 +105,8 @@
                     At WORKSYNC, we dedicate ourselves to offering unparalleled services in the field of human capital. We understand the value of a skilled workforce and are committed to providing the best staffing solutions for the following needs.
                 </span>
 
+                <!-- pc view cards -->
+
                 <div class="service-cont d-flex align-items-center justify-content-around w-100">
                     <div class="service-item d-flex flex-column align-items-center justify-content-center">
                         <img src="assets/service-dummy.png">
@@ -119,6 +121,35 @@
                     <div class="service-item d-flex flex-column align-items-center justify-content-center">
                         <img src="assets/service-dummy.png">
                         <span class="text-white my-3">Warehousing</span>
+                    </div>
+                </div>
+
+                <!-- mobile view cards -->
+
+                <div class="mobile-service row">
+                    <div class="col-6 mobile-item">
+                        <img src="/assets/mobile-service.png">
+                        <span>
+                            QUALITY LINE INSPECTION
+                        </span>
+                    </div>
+                    <div class="col-6 mobile-item">
+                        <img src="/assets/mobile-service.png">
+                        <span>
+                            QUALITY LINE INSPECTION
+                        </span>
+                    </div>
+                    <div class="col-6 mobile-item">
+                        <img src="/assets/mobile-service.png">
+                        <span>
+                            QUALITY LINE INSPECTION
+                        </span>
+                    </div>
+                    <div class="col-6 mobile-item">
+                        <img src="/assets/mobile-service.png">
+                        <span>
+                            QUALITY LINE INSPECTION
+                        </span>
                     </div>
                 </div>
 
@@ -158,7 +189,7 @@
                 <img src="assets/worksync-footer.png" class="footer-left_image">
             </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
+            <div class="footer1 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
                 <div class="footer-right_item mb-3">
                     <i class="bi bi-telephone-outbound-fill"></i>
                     <span>
@@ -176,7 +207,8 @@
 
                 <img src="assets/footer-map.png" class="footer-map">
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 d-flex flex-column footer-right">
+
+            <div class="footer2 col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 d-flex flex-column footer-right">
                 <span class="footer-right_title mb-4">
                     Send us a message!
                 </span>
@@ -190,11 +222,11 @@
                         <span>COMPANY*</span>
                         <input type="text">
                     </div>
-                    <div class="col-5 input-cont-6 d-flex mb-3">
+                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 input-cont-6 d-flex mb-3">
                         <span>CONTACT NUMBER*</span>
                         <input type="text">
                     </div>
-                    <div class="col-5 input-cont-6 d-flex mb-3">
+                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 input-cont-6 d-flex mb-3">
                         <span>EMAIL*</span>
                         <input type="text">
                     </div>
@@ -205,7 +237,7 @@
                     </div>
                     <div class="col-12 button-cont d-flex mb-3 justify-content-end">
                         <i class="bi bi-send-fill"></i>
-                        <span>SEND INQUIRY</span>
+                        <button>SEND INQUIRY</button>
                     </div>
                 </div>
             </div>
