Removed slash before mobile-service images

--- a/index.html
+++ b/index.html
@@ -128,25 +128,25 @@
 
                 <div class="mobile-service row">
                     <div class="col-6 mobile-item">
-                        <img src="/assets/mobile-service.png">
+                        <img src="assets/mobile-service.png">
                         <span>
                             QUALITY LINE INSPECTION
                         </span>
                     </div>
                     <div class="col-6 mobile-item">
-                        <img src="/assets/mobile-service.png">
+                        <img src="assets/mobile-service.png">
                         <span>
                             QUALITY LINE INSPECTION
                         </span>
                     </div>
                     <div class="col-6 mobile-item">
-                        <img src="/assets/mobile-service.png">
+                        <img src="assets/mobile-service.png">
                         <span>
                             QUALITY LINE INSPECTION
                         </span>
                     </div>
                     <div class="col-6 mobile-item">
-                        <img src="/assets/mobile-service.png">
+                        <img src="assets/mobile-service.png">
                         <span>
                             QUALITY LINE INSPECTION
                         </span>
