Added about-us page, 80% done with desktop view. Beautified code. Added some assets

--- a/about-us.html
+++ b/about-us.html
@@ -52,106 +52,90 @@
             </div>
         </div>
     </section>
-    <!-- banner -->
 
-    <div class="banner w-100 p-0">
-    </div>
+    <!--about title -->
 
-    <!-- title -->
-
-    <div class="row join-title">
-        <div class="col-12 main-join">
-            <div class="main">JOIN WORKSYNC</div>
-            <div class="sub">Explore career opportunities with us</div>
-        </div>
-        <div class="col-12 desc-join">
-            At WorkSync Solutions Corp., we are more than just an employer—we are a community dedicated to fostering
-            growth, innovation, and excellence. Our commitment to providing cutting-edge manpower solutions extends to
-            our employees, offering an environment where they can thrive, learn, and develop their careers. As a
-            forward-thinking company, we believe in the power of technology and innovation, not just in the services we
-            provide to our clients, but also in the opportunities we offer our team members.
+    <div class="row about-title">
+        <div class="about-title_text col-12 d-flex align-items-center justify-content-start">
+            Who We Are
         </div>
     </div>
 
-    <!-- offerings -->
+    <!-- About us -->
 
-    <div class="row offering">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column right-job">
-            <div class="job-title mb-2">Factory support staff</div>
-            <span class="job-sub">QC LINE INSPECTOR</span>
-            <span class="job-sub">SORTER</span>
-            <span class="job-sub">PACKER</span>
-            <span class="job-sub">MATERIALS HANDLER</span>
+    <section class="about-us">
+        <div class="row about-us_row">
+            <div
+                class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-start align-items-start mb-5">
+                <span class="about-title_text mb-5">
+                    About Us
+                </span>
 
-            <div class="job-title mb-2 mt-4">Warehouse and materials handling</div>
-            <span class="job-sub">FORKLIFT OPERATOR</span>
-            <span class="job-sub">WAREHOUSEMAN CLERK</span>
+                <span class="about-subtitle">
+                    MISSION
+                </span>
+
+                <span class="about-desc mb-5">
+                    Our mission is to be the preferred provider of manpower and staffing services, utilizing
+                    cutting-edge technology to optimize productivity and enhance workforce strategies for our clients.
+                </span>
+
+                <span class="about-subtitle">
+                    VISION
+                </span>
+
+                <span class="about-desc">
+                    WorkSync Solutions Corp. envisions a future where organizations seamlessly fill their staffing needs
+                    and employees thrive in a nurturing and prosperous environment.
+                </span>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex justify-content-end mb-5">
+                <img src="assets/about-1.png" class="about-image_first">
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-5">
+                <img src="assets/about-2.png" class="about-image_second">
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-5">
+                <div class="about-subtitle mb-3 d-flex justify-content-end">
+                    CORE VALUES
+                </div>
+
+                <div class="about-desc mb-4">
+                    <strong>MUTUAL RESPECT</strong> <br>
+                    We believe in fostering a respectful and inclusive environment where every individual is valued.
+                </div>
+                <div class="about-desc mb-4">
+                    <strong>PASSION FOR EXCELLENCE</strong> <br>
+                    We are committed to achieving the highest standards in all aspects of our business.
+                </div>
+                <div class="about-desc mb-4">
+                    <strong>HUMILITY</strong> <br>
+                    We approach our work with humility, recognizing that learning and growth are continuous processes.
+                </div>
+                <div class="about-desc mb-4">
+                    <strong>INTEGRITY</strong> <br>
+                    We adhere to the highest ethical standards, ensuring transparency and honesty in our dealings.
+                </div>
+                <div class="about-desc mb-4">
+                    <strong>HONOR</strong> <br>
+                    We honor our commitments and take responsibility for our actions, building trust with our clients
+                    and employees.
+                </div>
+                <div class="about-desc">
+                    <strong>COOPERATIVE EFFORT</strong> <br>
+                    We believe in the power of teamwork and collaboration to achieve common goals.
+                </div>
+            </div>
         </div>
-
-        <div
-            class="join-image col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 art d-flex justify-content-end right-image">
-            <img src="assets/join3.png">
-        </div>
-    </div>
-
-    <div class="row offering">
-        <div class="join-image col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 art d-flex justify-content-start p-0">
-            <img src="assets/join1.png">
-        </div>
-
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column align-items-end">
-            <div class="job-title mb-2">Administrative and clerical support</div>
-            <span class="job-sub">CLERK</span>
-            <span class="job-sub">SECRETARY</span>
-            <span class="job-sub">ADMIN ASSISTANT</span>
-            <span class="job-sub">OPERATIONS ASSISTANT</span>
-            <span class="job-sub">HR ASSISTANT</span>
-            <span class="job-sub">EXECUTIVE ASSISTANT</span>
-        </div>
-    </div>
-
-    <div class="row offering">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column right-job">
-            <div class="job-title mb-2">Maintenance and Housekeeping</div>
-            <span class="job-sub">GARDENER</span>
-            <span class="job-sub">UTILITYMAN</span>
-            <span class="job-sub">JANITOR/MAINTENANCE</span>
-
-            <div class="job-title mb-2 mt-4">Driving and Transportation</div>
-            <span class="job-sub">DELIVERY DRIVER</span>
-            <span class="job-sub">PAHINANTE</span>
-            <span class="job-sub">EXECUTIVE DRIVER</span>
-            <span class="job-sub">PERSONAL DRIVER</span>
-        </div>
-
-        <div
-            class="join-image col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 art d-flex justify-content-end right-image">
-            <img src="assets/join4.png">
-        </div>
-    </div>
-
-    <div class="row offering mb-5">
-        <div class="join-image col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 art d-flex justify-content-start p-0">
-            <img src="assets/join2.png">
-        </div>
-
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column align-items-end mb-5">
-            <div class="job-title mb-2">Healthcare</div>
-            <span class="job-sub">COMPANY NURSE</span>
-            <span class="job-sub">PHYSICIAN</span>
-
-            <div class="job-title mb-2 mt-4">Sales and Merchandising</div>
-            <span class="job-sub">MERCHANDISER</span>
-            <span class="job-sub">PROMODIZER</span>
-        </div>
-    </div>
+    </section>
 
     <!-- Footer -->
 
     <section class="footer" id="footer">
         <div class="row footer-row">
-            <div
-                class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 footer-left d-flex justify-content-start align-items-start flex-column">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 footer-left d-flex justify-content-start align-items-start flex-column">
                 <div class="footer-nav d-flex flex-column mb-4">
                     <span class="footer-nav-item mb-2">
                         <a href="#welcome">ABOUT US</a>
@@ -176,8 +160,7 @@
                 <img src="assets/worksync-footer.png" class="footer-left_image">
             </div>
 
-            <div
-                class="footer1 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
+            <div class="footer1 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
                 <div class="footer-right_item mb-3">
                     <i class="bi bi-telephone-outbound-fill"></i>
                     <span>
@@ -189,7 +172,7 @@
                 <div class="footer-right_item mb-3">
                     <i class="bi bi-geo-alt-fill"></i>
                     <span>
-                        S13 LYSA QUEEN Bldg., KM 37, MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
+                        S13 LYSA QUEEN Bldg., KM 37,  MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
                     </span>
                 </div>
 
@@ -222,12 +205,12 @@
                         <span>MESSAGE*</span>
                         <textarea></textarea>
                     </div>
-                </div>
-                <div class="col-12 button-cont d-flex mb-3 justify-content-end">
-                    <button>SEND INQUIRY</button>
+                    </div>
+                    <div class="col-12 button-cont d-flex mb-3 justify-content-end">
+                        <button>SEND INQUIRY</button>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
 
