--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,22 +14,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@1,8..60,300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@1,8..60,300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@1,8..60,300&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@1,8..60,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Custom CSS -->
     <link href="style/style.css" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Header -->
 
 
-    
+
     <!-- Intro -->
-    
+
     <section class="intro position-relative">
         <img src="assets/home-people.png" class="people position-absolute">
         <div class="row d-flex align-items-center header-row p-5">
@@ -62,9 +69,12 @@
                 </span>
 
                 <span class="welcome-desc text-center">
-                    WORKSYNC SOLUTIONS CORP. is a manpower service solutions company aimed in providing long-term solutions to staffing needs. Our extensive knowledge and experience in Quality, Productivity and Innovation would redefine the industry.
+                    WORKSYNC SOLUTIONS CORP. is a manpower service solutions company aimed in providing long-term
+                    solutions to staffing needs. Our extensive knowledge and experience in Quality, Productivity and
+                    Innovation would redefine the industry.
                     <br> <br>
-                    We place an emphasis on <strong>efficiency</strong>, <strong>innovative training</strong> and <strong>technology solutions</strong> empowering our clients for global success.
+                    We place an emphasis on <strong>efficiency</strong>, <strong>innovative training</strong> and
+                    <strong>technology solutions</strong> empowering our clients for global success.
                 </span>
 
                 <img src="assets/welcome-clipart.png" class="mt-5">
@@ -77,16 +87,19 @@
     <section class="why position-relative" id="why">
         <!-- <img src="assets/why-carry.png" class="carry position-absolute"> -->
         <div class="row why-row">
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 why-left d-flex align-items-end justify-content-center">
+            <div
+                class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 why-left d-flex align-items-end justify-content-center">
                 <img src="assets/why.png">
             </div>
             <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 why-right">
                 <div class="d-flex flex-column justify-between align-items-center w-100">
                     <img src="assets/question-mark.png">
                     <span>
-                        At WorkSync Solutions Corp., we are dedicated to understanding the <strong>unique needs of our clients</strong> and delivering tailored solutions that drive success. 
+                        At WorkSync Solutions Corp., we are dedicated to understanding the <strong>unique needs of our
+                            clients</strong> and delivering tailored solutions that drive success.
                         <br> <br>
-                        Join us in experiencing staffing solutions that are effective, and aligned with the demands of the modern workplace.
+                        Join us in experiencing staffing solutions that are effective, and aligned with the demands of
+                        the modern workplace.
                     </span>
                 </div>
             </div>
@@ -105,7 +118,9 @@
                 </span>
 
                 <span class="service-desc text-white text-center">
-                    At WORKSYNC, we dedicate ourselves to offering unparalleled services in the field of human capital. We understand the value of a skilled workforce and are committed to providing the best staffing solutions for the following needs.
+                    At WORKSYNC, we dedicate ourselves to offering unparalleled services in the field of human capital.
+                    We understand the value of a skilled workforce and are committed to providing the best staffing
+                    solutions for the following needs.
                 </span>
 
                 <!-- pc view cards -->
@@ -167,7 +182,8 @@
 
     <section class="footer" id="footer">
         <div class="row footer-row">
-            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 footer-left d-flex justify-content-start align-items-start flex-column">
+            <div
+                class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 footer-left d-flex justify-content-start align-items-start flex-column">
                 <div class="footer-nav d-flex flex-column mb-4">
                     <span class="footer-nav-item mb-2">
                         <a href="#welcome">ABOUT US</a>
@@ -192,7 +208,8 @@
                 <img src="assets/worksync-footer.png" class="footer-left_image">
             </div>
 
-            <div class="footer1 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
+            <div
+                class="footer1 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
                 <div class="footer-right_item mb-3">
                     <i class="bi bi-telephone-outbound-fill"></i>
                     <span>
@@ -204,7 +221,7 @@
                 <div class="footer-right_item mb-3">
                     <i class="bi bi-geo-alt-fill"></i>
                     <span>
-                        S13 LYSA QUEEN Bldg., KM 37,  MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
+                        S13 LYSA QUEEN Bldg., KM 37, MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
                     </span>
                 </div>
 
@@ -237,12 +254,12 @@
                         <span>MESSAGE*</span>
                         <textarea></textarea>
                     </div>
-                    </div>
-                    <div class="col-12 button-cont d-flex mb-3 justify-content-end">
-                        <button>SEND INQUIRY</button>
-                    </div>
+                </div>
+                <div class="col-12 button-cont d-flex mb-3 justify-content-end">
+                    <button>SEND INQUIRY</button>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -251,4 +268,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
